sidenav shows when hamburger is clicked and container is covered to prevent user interactions but if the cover is clicked the sidenav is hidden again, all with animated transitions

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,5 @@
 @import 'reset';
+@import 'sidenav';
 @import 'cookie-consent';
 @import 'header';
 @import 'main';
@@ -13,6 +14,26 @@
   color: #333645;
   letter-spacing: 0.4px;
   font-family: 'Poppins', sans-serif;
+}
+
+#container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  background-color: #333645;
+  opacity: 0;
+  transition: opacity .5s;
+  z-index: 99999;
+  display: none;
 }
 
 #main {
